<resources>
    <string name="app_name">Jokenpo</string>
    <string name="button_title">Iniciar</string>
    <string name="title_app_bar">Minha App Bar</string>
    <string name="menu_save_title">Salvar</string>
    <string name="menu_settings_title">Configuração</string>
    <string name="drawer_home_title">Home</string>
    <string name="drawer_account_title">Conta</string>
    <string name="bottom_nav_title_1">Jogador 1</string>
    <string name="bottom_nav_title_2">Resultado</string>
    <string name="title_inicio">Bem Vindo ao Jokenpô</string>
    <string name="nome_app">Jokenpô</string>
    <string name="jogada">Selecionar jogada</string>
    <string name="resultado_page">Resultado</string>
    <string name="Jogador_ganhador">O Jogador xxx ganhou</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>